WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133310
[New Multicolumn] Nested transforms inside columns don't work right.
https://bugs.webkit.org/show_bug.cgi?id=133310
Summary
[New Multicolumn] Nested transforms inside columns don't work right.
Dave Hyatt
Reported
2014-05-27 08:54:23 PDT
Nested transforms inside columns don't work right. I wasn't clearing the pagination layers properly.
Attachments
Patch
(19.35 KB, patch)
2014-05-27 08:55 PDT
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-05-27 08:55:13 PDT
Created
attachment 232131
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-05-27 09:30:25 PDT
Comment on
attachment 232131
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232131&action=review
> LayoutTests/ChangeLog:11 > + * fast/multicol/pagination/nested-transforms.html: Added. > + * platform/mac/fast/multicol/pagination/nested-transforms-expected.png: Added. > + * platform/mac/fast/multicol/pagination/nested-transforms-expected.txt: Added.
Can't this be a ref test?
Dave Hyatt
Comment 3
2014-05-27 11:00:04 PDT
Landed in
r169390
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug