REGRESSION: Audio volume scrubber does not show volume level thumb <rdar://problem/16902004> https://bugs.webkit.org/show_bug.cgi?id=133310

Reviewed by Dean Jackson.


Source/WebCore:
This was just a silly mistake on my part with the setting of the pagination
layers. Layers inside transforms are supposed to clear out their pagination
status based off their ancestor containing block layers, and not off the
enclosing pagination layer.

Added fast/multicol/pagination/nested-transforms.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updatePagination):

LayoutTests:
* fast/multicol/pagination/nested-transforms.html: Added.
* platform/mac/fast/multicol/pagination/nested-transforms-expected.png: Added.
* platform/mac/fast/multicol/pagination/nested-transforms-expected.txt: Added.



Canonical link: https://commits.webkit.org/151345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169390 268f45cc-cd09-0410-ab3c-d52691b4dbfc